--- a/src/components/footer/footer.styles.css
+++ b/src/components/footer/footer.styles.css
@@ -3,7 +3,7 @@
   width: 90vw;
   padding: 1rem 1.5rem;
   margin: 0 auto;
-  margin-bottom: 2rem;
+  margin-top: 5rem;
   border-radius: 10px;
 
   box-shadow: 0rem 1rem 1.5rem 0.2rem rgba(0, 0, 0, 0.3);
@@ -11,16 +11,20 @@
 
 .social-media {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
-  gap: 0 4rem;
+  gap: 0 1rem;
+}
+
+.social-media a {
+  border-radius: 100px;
 }
 
 .icon {
   cursor: pointer;
   border-radius: 10px;
   padding: 0.7rem;
-  font-size: 5rem;
+  font-size: 4rem;
   color: rgb(149, 218, 218, 0.8);
   box-shadow: 0 0.1rem 0.8rem 0.01rem rgba(0, 0, 0, 0.3);
 }
